apidoc/1.6.0/_sources/arcgis.raster.analytics.rst.txt
arcgis.raster.analytics module
====================

.. automodule:: arcgis.raster.analytics

get_datastores
--------------
.. automethod:: arcgis.raster.analytics.get_datastores
    
is_supported
--------------
.. automethod:: arcgis.raster.analytics.is_supported


generate_raster
---------------
.. automethod:: arcgis.raster.analytics.generate_raster


interpolate_points
------------------
.. automethod:: arcgis.raster.analytics.interpolate_points


create_viewshed
---------------
.. automethod:: arcgis.raster.analytics.create_viewshed


summarize_raster_within
-----------------------
.. automethod:: arcgis.raster.analytics.summarize_raster_within


calculate_density
-----------------
.. automethod:: arcgis.raster.analytics.calculate_density


classify
--------
.. automethod:: arcgis.raster.analytics.classify


segment
------------------
.. automethod:: arcgis.raster.analytics.segment


train_classifier
----------------
.. automethod:: arcgis.raster.analytics.train_classifier


convert_feature_to_raster
-------------------------
.. automethod:: arcgis.raster.analytics.convert_feature_to_raster


convert_raster_to_feature
-------------------------
.. automethod:: arcgis.raster.analytics.convert_raster_to_feature


copy_raster
-----------
.. automethod:: arcgis.raster.analytics.copy_raster


create_image_collection
-----------
.. automethod:: arcgis.raster.analytics.create_image_collection


add_image
---------
.. automethod:: arcgis.raster.analytics.add_image


delete_image
------------
.. automethod:: arcgis.raster.analytics.delete_image


delete_image_collection
-----------------------
.. automethod:: arcgis.raster.analytics.delete_image_collection


build_footprints
-----------------------
.. automethod:: arcgis.raster.analytics.build_footprints


build_overview
-----------------------
.. automethod:: arcgis.raster.analytics.build_overview


calculate_statistics
-----------------------
.. automethod:: arcgis.raster.analytics.calculate_statistics

optimum_travel_cost_network
-----------------------
.. automethod:: arcgis.raster.analytics.optimum_travel_cost_network

